package com.company;

import javax.swing.*;

public class Main {

    public static void main(String[] args) {
	     new Homepage();
    }
}
