@startuml

title __MASTERMIND PROJECT's Class Diagram__\n

  namespace com.company {
    class com.company.Ai {
    }
  }
  

  namespace com.company {
    class com.company.Board {
    }
  }
  

  namespace com.company {
    class com.company.BoardFrame {
    }
  }
  

  namespace com.company {
    class com.company.CheckBox {
    }
  }
  

  namespace com.company {
    class com.company.CheckBoxArray {
    }
  }
  

  namespace com.company {
    class com.company.ChoosingFrame {
    }
  }
  

  namespace com.company {
    class com.company.Colors {
    }
  }
  

  namespace com.company {
    class com.company.ComputerChoose {
    }
  }
  

  namespace com.company {
    class com.company.ComputerVsPlayer {
    }
  }
  

  namespace com.company {
    class com.company.GameLogic {
    }
  }
  

  namespace com.company {
    class com.company.Homepage {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.OkAndClear {
    }
  }
  

  namespace com.company {
    class com.company.PlayerVsPlayer {
    }
  }
  

  namespace com.company {
    class com.company.WhoChooseFrame {
    }
  }
  

  namespace com.company {
    class com.company.WhoWillPlay {
    }
  }
  

  namespace com.company {
    class com.company.WinFrame {
    }
  }
  

  com.company.Board -up-|> javax.swing.JPanel
  com.company.BoardFrame .up.|> java.awt.event.ActionListener
  com.company.BoardFrame -up-|> javax.swing.JFrame
  com.company.BoardFrame o-- com.company.CheckBoxArray : checks
  com.company.CheckBox -up-|> javax.swing.JPanel
  com.company.CheckBoxArray -up-|> javax.swing.JLabel
  com.company.ChoosingFrame .up.|> java.awt.event.ActionListener
  com.company.ChoosingFrame -up-|> javax.swing.JFrame
  com.company.Colors -up-|> javax.swing.JLabel
  com.company.Homepage .up.|> java.awt.event.ActionListener
  com.company.Homepage -up-|> javax.swing.JFrame
  com.company.OkAndClear -up-|> javax.swing.JPanel
  com.company.WhoChooseFrame .up.|> java.awt.event.ActionListener
  com.company.WhoChooseFrame -up-|> javax.swing.JFrame
  com.company.WhoWillPlay .up.|> java.awt.event.ActionListener
  com.company.WhoWillPlay -up-|> javax.swing.JFrame
  com.company.WinFrame -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
